# thos

./: .clang-format  .clang-tidy  .clangd  .gitmodules  Makefile  README.md  meson.build  meson.options  notes.md
misc/: check.sh  check_all.sh  find_compile_flags.sh  find_libc_reqs.sh  find_libgcc.sh  find_self.sh  find_tests.sh  format_all.sh  gdbinit-template  list_sources.sh  make_bin.sh  make_gdbinit.sh  make_opensbi.sh  make_qemu_launch.sh  make_test_info.sh  make_userexec_bin.sh  parse-device-tree.sh  process_user_exec.sh  relink_meson_packagefiles.sh  rewrite_paths.sh  run_single_test.sh  run_test_matrix.sh  run_tests.sh  serial_pipes.sh  user-asm.sh  wrap_qemu.sh
misc/defines/: debug.txt  other.txt
misc/meson-machines/: final.ini  gnu.ini  llvm.ini  riscv32-gnu.txt  riscv32-llvm.txt  riscv32.ini  riscv64-gnu.txt  riscv64-llvm.txt  riscv64.ini  riscv_common.ini
src/: alloc.c  alloc.h  debug.c  example_process.c  example_process.h  flags.h  io.c  io.h  kernel.c  kernel.lds  mem.c  mem.h  paging.c  paging.h  panic.h  process.c  process.h  sbi.c  sbi.h  string.h  trap.c  trap.h  types.h
src/common/: align.h  asm.h  bits.h  build_info.h  endian.h  syscalls.h  util.h
src/kernel/: asm.h  board.c  buffer.c  buffer.h  csr.h  debug.c  debug.h  device_tree.c  device_tree.h  example_process.c  example_process.h  exit.c  exit_sifive.c  exit_sifive.h  flags.h  hart.c  hart.h  io.c  io.h  kernel.c  kernel.h  kernel.lds  list.c  list.h  lock.c  lock.h  paging.c  paging.h  panic.c  panic.h  process.c  process.h  sbi.c  sbi.h  sections.c  sections.h  sifive_plic.c  sifive_plic.h  sifive_test.c  sifive_test.h  (+11 more)
src/kernel/boot/: boot.c  boot.h  kernel.c  kernel.h
src/kernel/device/: board.c  board.h  device_tree.c  sifive_plic.c  sifive_plic.h  sifive_test.c  sifive_test.h  sifive_uart.c  sifive_uart.h
src/kernel/process/: exits.c  exits.h  lifecycle.c  lifecycle.h  process.c  process.h  switch.c  switch.h
src/kernel/trap/: frame.c  frame.h  handler.c  handler.h  registers.c  registers.h  routines.c  routines.h  scause.c  scause.h  trap.c
src/kernel/virtual_memory/: page.c  page.h  page_table.c  page_table.h  paging.c  satp.c  satp.h  virtual_address.c  virtual_address.h
src/libc/: assert.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
src/user/: first.c  syscall.h  syscalls.h  user.c  user.lds  user2.c
src/userlib/: io.c  panic.h  start.c  stdlib.c  syscall.c  syscall.h
subprojects/: .gitignore  opensbi.wrap
subprojects/packagefiles/opensbi/: 0001.patch  meson.build  meson.options
